# mlops-assignment-e2e-ml-pipeline

./: .env.example  .gitignore  README.md  REPORT.md  docker-compose.yaml  pyproject.toml  run-airflow-standalone.sh  test_helpers.py
dags/: evaluate_agent.py
docker/airflow/: Dockerfile
scripts/: mini-swe-bench-batch.sh  swe-bench-eval.sh
src/pipeline/: helpers.py
